Fix minor layout issues
Fix querybuilder attribute filename overflowing
Reduce size of icons in the main corpora tables

--- a/src/main/webapp/css/corpora.css
+++ b/src/main/webapp/css/corpora.css
@@ -61,11 +61,6 @@ table.corpora a.disabled {
    color: #bbb;
 }
 
-table.corpora a.icon {
-	margin: 0 .8em;
-}
-
-
 .alert {
     margin-top: 1em;
 }
